Added mru page replacement

--- a/modules/page-replacement/index.html
+++ b/modules/page-replacement/index.html
@@ -103,7 +103,7 @@
           <header>
             <div id="header-button">
               <h1>Page Replacement</h1>
-              <a href="#modules" class="btn-get-started scrollto">Go To Simulations</a>
+            
             </div>
 
 
@@ -149,33 +149,10 @@
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a href="./ljf.html">Longest Job First</a></h3>
+              <h3><a href="./mru.html">Most Recently Used</a></h3>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-database-2-line" style="color: #47aeff;"></i>
-              <h3><a href="./lrtf.html">Longest Remaining Time First</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-              <h3><a href="./priority.html">Priority</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-              <h3><a href="./round-robin.html">Round Robin</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-              <h3><a href="./priority-nonpre.html">Priority Non-Preemptive</a></h3>
-            </div>
-          </div>
+          
 
         </div>
 
@@ -229,5 +206,7 @@
   <script src="../../assets/js/main.js"></script>
 
 </body>
+
+
 
 </html>
