Added major functionality
Co-authored-by: VIKAS KESHAVAMURTHY BHAT <vikaskeshavamurthybhat.201cs266@nitk.edu.in>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <style>
-  .typewriter{
+  .typewriter {
     overflow-x: hidden;
     /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange;
@@ -94,34 +94,6 @@
       </div>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#modules">Get Started</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
@@ -133,7 +105,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up" >Operating System Simulator</h1>
+          <h1 data-aos="fade-up">Operating System Simulator</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">A simple yet robust OS Simulator to visualize all fundamental OS
             concepts </h2>
           <div data-aos="fade-up" data-aos-delay="800">
@@ -201,45 +173,22 @@
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-              <h3><a href="">Eiusmod Tempor</a></h3>
+              <h3><a href="./modules/deadlock/index.html">Deadlock Prevention</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-              <h3><a href="">Midela Teren</a></h3>
+              <h3><a href="./modules/process-syncronization/index.html">Process Syncronization</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-              <h3><a href="">Pira Neve</a></h3>
+              <h3><a href="./modules/file-allocation/index.html">File Allocation</a></h3>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-anchor-line" style="color: #b2904f;"></i>
-              <h3><a href="">Dirada Pack</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-disc-line" style="color: #b20969;"></i>
-              <h3><a href="">Moton Ideal</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-base-station-line" style="color: #ff5828;"></i>
-              <h3><a href="">Verdo Park</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-              <h3><a href="">Flavor Nivelanda</a></h3>
-            </div>
-          </div>
+         
         </div>
 
       </div>
@@ -255,17 +204,17 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Team</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
         </div>
 
-        <div class="row">
+        <div class="row d-flex align-items-stretch">
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
 
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Dibyam Kumar</h4>
+                <span>201CS266</span>
+                <span>Team Leader</span>
               </div>
             </div>
           </div>
@@ -274,8 +223,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="200">
 
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>T Naga Tarun</h4>
+                <span>201CS261</span>
               </div>
             </div>
           </div>
@@ -284,8 +233,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
 
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Tijin Abe Thomas</h4>
+                <span>201CS262</span>
               </div>
             </div>
           </div>
@@ -294,8 +243,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
 
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Tulsidas Naik</h4>
+                <span>201CS263</span>
               </div>
             </div>
           </div>
@@ -304,8 +253,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
 
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Umais Rifah</h4>
+                <span>201CS264</span>
               </div>
             </div>
           </div>
@@ -314,8 +263,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
 
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Vaishnavi L.</h4>
+                <span>201CS265</span>
               </div>
             </div>
           </div>
@@ -324,8 +273,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
 
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Vikas K. Bhat</h4>
+                <span>201CS266</span>
               </div>
             </div>
           </div>
@@ -335,8 +284,8 @@
 
 
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Vishal Kumar Pal</h4>
+                <span>201CS267</span>
               </div>
             </div>
           </div>
@@ -344,8 +293,8 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Swaroop</h4>
+                <span>201CS268</span>
               </div>
             </div>
           </div>
@@ -354,8 +303,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
 
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Shishirdeep</h4>
+                <span>191CS</span>
               </div>
             </div>
           </div>
@@ -389,12 +338,6 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
-            <a href="#intro" class="scrollto">Home</a>
-            <a href="#about" class="scrollto">About</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Use</a>
-          </nav>
         </div>
       </div>
     </div>
